rnsc/tests/snapshots/error-parser-type_hints-long-not_i64_with_space.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @long "not a long" ; <- has space and should be quoted in help
.super java/lang/Object
----- STDERR -----
[E-003] Error: '@long' requires a 64-bit integer, but 'not a long' is not a number
   ╭─[ test_data/integration/error/parser/type_hints/long/not_i64_with_space.rns:1:8 ]
   │
 1 │ .class @long "not a long" ; <- has space and should be quoted in help
   │        ──┬── ──────┬─────  
   │          ╰───────────────── forces explicit long constant pool type
   │                    │       
   │                    ╰─────── but 'not a long' is not a number
   │ 
   │ Help: 'not a long' is not a valid integer literal.
   │       
   │       Syntax:
   │       @long <long>
   │       
   │       For example:
   │       @long 100000
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-003
───╯
----- HASH -----
not generated
